--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+<meta charset='utf-8'>
 <title>PhoneGap</title>
 <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
+<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
+  <link rel="stylesheet" href="animate.min.css">
+
+
 </head>
 <body>
-<h1>Hello World</h1>
-<h2>Hello World</h2>
-<h3>Hello World</h3>
-<h4>Hello World</h4>
+<a href='#' class="button animated shake" >Example</a><br>
+<button id="btn1" backgroundColor="yellow">Animate</button>
+
+<style>
+body{
+margin:50px;
+background:#2980b9;
+text-align:center;
+}
+a.button{
+background:#e74c3c;
+color:white;
+padding:20px;
+display:inline-block;
+font-size:50px;
+border-radius:10px
+}
+</style>
+
+<script>
+$('a').addClass('animated shake');
+</script>
 </body>
 </html>
