--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -5,13 +5,13 @@
 <title>PhoneGap</title>
 <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
-  <link rel="stylesheet" href="animate.min.css">
+<link rel="stylesheet" href="animate.min.css">
 
 
 </head>
 <body>
-<a href='#' class="button animated shake" >Example</a><br>
-<button id="btn1" backgroundColor="yellow">Animate</button>
+<a href='#' class="button" >Example</a><br>
+<button class="margin" id="btn1" backgroundColor="yellow">Animate</button>
 
 <style>
 body{
@@ -27,10 +27,23 @@ display:inline-block;
 font-size:50px;
 border-radius:10px
 }
+#btn1{
+padding:20px;
+font-size:50px;
+border-radius:10px
+}
+button.margin {margin: 2cm 4cm 3cm 4cm}
 </style>
 
 <script>
-$('a').addClass('animated shake');
+$(function(){
+var animate='animated hinge';
+$('#btn1').on('click',function(){
+$('a.button').addClass(animate).one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function(){
+  $(this).removeClass(animate);
+});
+});
+});
 </script>
 </body>
 </html>
