--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset='utf-8'>
 <title>PhoneGap</title>
-<script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
+<!--<script type="text/javascript" charset="utf-8" src="phonegap.js"></script>-->
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
 <link rel="stylesheet" href="animate.min.css">
 
@@ -23,6 +23,7 @@
 <style>
 body{
 margin:50px;
+background-color:#2980b9;
 background:#2980b9;
 text-align:center;
 }
